--- a/components/java-springboot/overlays/production/deployment-patch.yaml
+++ b/components/java-springboot/overlays/production/deployment-patch.yaml
@@ -6,7 +6,9 @@ metadata:
   namespace: managed
 spec:
   replicas: 1
-  selector: null
+  selector:
+    matchLabels:
+      app.kubernetes.io/instance: java-springboot
   strategy: {}
   template:
     metadata:
